--- a/quem somos.html
+++ b/quem somos.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
-<body>
+<body>    <nav>
+    <a href="index.html">Página inicial</a>
+    <a href="quem somos.html">Quem somos</a>
+    <a href="lojas.html">Lojas</a>
+    <a href="produtos.html">Produtos</a>
+    <a href="aluguel.html">Alugue sua loja</a>
+    <a href="Interna/login.html">Área interna</a>
+</nav>
     <h1>Quem somos</h1>
     <p>O InfoCena é um Shopping cujo a atividade principal é a administração e a locação  de stands, lojas <br>
     e quiosques. A comercialização de produtos/ serviços é de inteira responsabilidade dos lojistas</p>
     <p>Se você está em busca de um determinado produto faça a sua procura na página de produtos, escolha <br>
-    seu produto e clique para saber mais informações sobre ele e sobre a loja a quel ele está disponível</p>
+    seu produto e clique para saber mais informações sobre ele e sobre a loja a quel ele está disponível</p><br>
+    <a href="index.html">Voltar para a página inicial</a>
 </body>
 </html>
